[package]
name = "flux-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"

tracing = "0.1.41"
tracing-subscriber = "0.3.19"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

config = { version = "0.15", default-features = false }

strum = { version = "0.27.1", features = ["derive"] }
